--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,13 @@
 // .App {
 //     text-align: center;
 //   }
-  
+.loading-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
 .App-logo {
     height: 10vmin;
     pointer-events: none;
